# opencv-lite-template

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
